Updated work local all fitur

--- a/frontend/src/pages/index.html
+++ b/frontend/src/pages/index.html
@@ -12,14 +12,21 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="/src/UPN.png" alt="Logo" width="30" height="30" />
-      <span class="ms-2 fw-bold">Prabu UPNYK</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <a class="navbar-brand d-flex align-items-center" href="#">
+    <img src="/src/UPN.png" alt="Logo" width="30" height="30" />
+    <span class="ms-2 fw-bold">Prabu UPNYK</span>
+  </a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto" id="nav-links">
+      <!-- akan diisi via JS -->
+    </ul>
   </div>
+</div>
+
 </nav>
 
 <!-- Hero Section -->
@@ -28,8 +35,6 @@
     <h1>Selamat Datang di Prabu UPNYK</h1>
     <p>Platform Referensi Acara dan Bela Negara Universitas</p>
     <div id="auth-buttons" class="mt-4">
-      <a href="src/pages/services/login.html" class="btn btn-light">Sign In</a>
-      <a href="src/pages/services/register.html" class="btn btn-outline-light ms-2">Sign Up</a>
     </div>
   </div>
 </section>
