--- a/frontend/src/pages/admin/add-event.html
+++ b/frontend/src/pages/admin/add-event.html
@@ -7,42 +7,36 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
-    .navbar-brand {
-      font-weight: bold;
+    body {
+      background-color: #f8f9fa;
     }
-    .btn-primary {
-      background-color: #0d6efd;
-      border: none;
-    }
-    .btn-primary:hover {
-      background-color: #0b5ed7;
-    }
-    .btn-warning, .btn-danger {
-      margin-right: 0.5rem;
-    }
-    .card-title {
-      color: #0d6efd;
-    }
+    .navbar-brand { font-weight: bold; }
+    .btn-primary { background-color: #0d6efd; border: none; }
+    .btn-primary:hover { background-color: #0b5ed7; }
+    .card-title { color: #0d6efd; }
     .hero-background {
       background: linear-gradient(to right, #1e3c72, #2a5298);
       color: white;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
     }
-    .footeredit {
-      background-color: white;
-      color: #1e3c72;
-      padding: 10px 0;
-      text-align: center;
-      margin-top: 10px;
+    footer {
+      font-size: 0.9rem;
+      color: #555;
+      background-color: #f8f9fa;
     }
   </style>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="src/UPN.png" alt="Logo" width="30" height="30" />
+    <a class="navbar-brand d-flex align-items-center" href="dashboard-admin.html">
+      <img src="/src/UPN.png" alt="Logo" width="30" height="30" />
       <span class="ms-2 fw-bold">Prabu UPNYK</span>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -54,50 +48,54 @@
           <a class="nav-link" href="dashboard-admin.html">Manage Event</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
+          <a class="nav-link" href="/src/pages/services/logout.html">Logout</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- Tambah Event -->
-<section class="hero-background py-5">
+<!-- Form Tambah Event -->
+<section class="hero-background">
   <div class="container">
-    <div class="card shadow-sm">
+    <div class="card shadow-sm w-100">
       <div class="card-body">
         <h3 class="card-title mb-4">Tambah Event Baru</h3>
-
-        <!-- Form Tambah Event -->
-        <form method="POST" action="/add-event">
+        <form id="addEventForm">
           <div class="mb-3">
             <label for="title" class="form-label">Judul Event</label>
-            <input type="text" class="form-control" id="title" name="title" required />
+            <input type="text" class="form-control" id="title" required />
           </div>
 
           <div class="mb-3">
             <label for="description" class="form-label">Deskripsi</label>
-            <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
+            <textarea class="form-control" id="description" rows="3" required></textarea>
           </div>
 
           <div class="mb-3">
             <label for="date" class="form-label">Tanggal</label>
-            <input type="date" class="form-control" id="date" name="date" required />
+            <input type="date" class="form-control" id="date" required />
           </div>
 
           <div class="mb-3">
             <label for="location" class="form-label">Lokasi</label>
-            <input type="text" class="form-control" id="location" name="location" required />
+            <input type="text" class="form-control" id="location" required />
           </div>
 
           <div class="mb-3">
-            <label for="image" class="form-label">URL Gambar</label>
-            <input type="url" class="form-control" id="image" name="image" />
+            <label for="quota" class="form-label">Kuota</label>
+            <input type="number" class="form-control" id="quota" min="1" required />
+          </div>
+
+          <!-- Tambahkan input file gambar -->
+          <div class="mb-3">
+            <label for="image" class="form-label">Upload Gambar Event</label>
+            <input type="file" class="form-control" id="image" name="image" accept="image/*" />
           </div>
 
           <div class="d-flex flex-wrap mt-4">
             <button type="submit" class="btn btn-primary me-2">Tambah +</button>
-            <a href="dashboard-admin.html" class="btn btn-secondary">Cancel</a>
+            <a href="dashboard-admin.html" class="btn btn-secondary">Batal</a>
           </div>
         </form>
       </div>
@@ -106,10 +104,11 @@
 </section>
 
 <!-- Footer -->
-<footer class="footeredit">
-  <p>&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
+<footer class="mt-auto text-center py-3 border-top">
+  <p class="mb-0">&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="add-event-script.js"></script>
 </body>
 </html>
