--- a/frontend/src/pages/admin/dashboard-admin.html
+++ b/frontend/src/pages/admin/dashboard-admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dashboard Admin | PRABU UPNYK</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     .navbar-brand { font-weight: bold; }
@@ -14,18 +14,41 @@
     .card-title { color: #0d6efd; }
   </style>
 </head>
+<script>
+  async function refreshAdminToken() {
+    try {
+      const res = await fetch("http://localhost:5000/tokenadmin", {
+        method: "GET",
+        credentials: "include"
+      });
+
+      if (!res.ok) throw new Error("Gagal refresh token");
+
+      const data = await res.json();
+      localStorage.setItem("token", data.accessToken);
+    } catch (err) {
+      console.error("🔒 Token kadaluarsa atau tidak valid:", err);
+      alert("Sesi berakhir, silakan login ulang.");
+      window.location.href = "../services/login.html";
+    }
+  }
+
+  // Panggil saat halaman dimuat
+  window.addEventListener("DOMContentLoaded", refreshAdminToken);
+</script>
 <body>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="src/UPN.png" alt="Logo" width="30" height="30" />
+      <img src="../../UPN.png" alt="Logo" width="30" height="30" />
       <span class="ms-2 fw-bold">Prabu UPNYK</span>
     </a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="logout.html">Logout</a></li>
+        <li class="nav-item"><a class="nav-link" href="manage-account.html">Manage Account</a></li>
+        <li class="nav-item"><a class="nav-link" href="../services/logout.html">Logout</a></li>
       </ul>
     </div>
   </div>
@@ -36,7 +59,7 @@
   <div class="container text-center my-4">
     <h1 class="d-flex justify-content-center align-items-center gap-3">
       Manage your event here!
-      <a href="add-event.html" class="btn btn-outline-primary py-2">New Event +</a>
+      <a href="add-event.html" class="btn btn-outline-light py-2">New Event +</a>
     </h1>
   </div>
 </section>
@@ -48,26 +71,11 @@
   </div>
 </section>
 
-<!-- Modal Pendaftar -->
-<div class="modal fade" id="registrantsModal" tabindex="-1" aria-labelledby="registrantsModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-scrollable">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="registrantsModalLabel">Daftar Pendaftar Event</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Tutup"></button>
-      </div>
-      <div class="modal-body" id="registrantsList">
-        <p>Loading...</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<footer class="text-center py-3 border-top mt-auto">
+<footer class="text-center py-3 border-top mt-2">
   <p>&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
 </footer>
 
-<script src="auth-check.js"></script>
+<script src="../services/auth-check-admin.js"></script>
 <script src="dashboard-admin-script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
