--- a/frontend/src/pages/admin/edit-event-detail.html
+++ b/frontend/src/pages/admin/edit-event-detail.html
@@ -12,23 +12,19 @@
     .btn-primary:hover { background-color: #0b5ed7; }
     .btn-warning, .btn-danger { margin-right: 0.5rem; }
     .card-title { color: #0d6efd; }
-    .hero-background { background: linear-gradient(to right, #1e3c72, #2a5298); color: white; }
-    .footeredit {
-      background-color: white;
-      color: #1e3c72;
-      padding: 10px 0;
-      text-align: center;
-      margin-top: 10px;
-    }
+    .hero-background { background: linear-gradient(to right, #1e3c72, #2a5298); color: white;flex: 1;
+    display: flex;
+    align-items: center; }
+    #img-preview { max-width: 220px; margin-bottom: 1rem; display: block; }
   </style>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="dashboard-admin.html">
-      <img src="src/UPN.png" alt="Logo" width="30" height="30" />
+      <img src="../../UPN.png" alt="Logo" width="30" height="30" />
       <span class="ms-2 fw-bold">Prabu UPNYK</span>
     </a>
   </div>
@@ -44,7 +40,7 @@
         <div id="error-msg" class="alert alert-danger d-none"></div>
 
         <!-- Form Edit Event -->
-        <form id="editForm">
+        <form id="editForm" enctype="multipart/form-data">
           <div class="mb-3">
             <label for="title" class="form-label">Judul Event</label>
             <input type="text" class="form-control" id="title" required />
@@ -66,8 +62,10 @@
           </div>
 
           <div class="mb-3">
-            <label for="image" class="form-label">URL Gambar</label>
-            <input type="url" class="form-control" id="image" />
+            <label for="image" class="form-label">Upload Gambar Event</label>
+            <input type="file" class="form-control" id="image" name="image" accept="image/*" />
+            <!-- Preview Gambar Lama -->
+            <img id="img-preview" class="d-none" src="#" alt="Preview Gambar Event" />
           </div>
 
           <div class="d-flex flex-wrap mt-4">
@@ -82,11 +80,11 @@
 </section>
 
 <!-- Footer -->
-<footer class="footeredit">
-  <p>&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
+<footer class="footer1 mt-auto text-center py-3 border-top bg-light">
+  <p class="mb-0">&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
 </footer>
 
-<script src="auth-check.js"></script>
+<script src="../services/auth-check.js"></script>
 <script src="edit-event-detail-script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
