--- a/frontend/src/pages/user/daftar-event.html
+++ b/frontend/src/pages/user/daftar-event.html
@@ -3,21 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Daftar Event | PRABU UPNYK</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background-color: #f9f9f9;
+      background: linear-gradient(to right, #1e3c72, #2a5298);
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
-    .container {
-      max-width: 600px;
-      margin-top: 80px;
+
+    .container-box {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      margin-top: 60px;
-      background-color: #f1f1f1;
+
+    .card {
+      background-color: white;
+      color: #212529;
+      border-radius: 14px;
+      width: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem 2.5rem;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      min-width: 320px;
+      max-width: 100vw;
+    }
+
+    #event-img-preview {
+      width: auto;
+      max-width: 100%;
+      height: auto;
+      max-height: 260px;
+      background: #f8f9fa;
+      margin-bottom: 1rem;
+      display: block;
+    }
+
+    .btn-primary {
+      background-color: #0d6efd;
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: #0b5ed7;
+    }
+
+    .text-muted {
+      color: #6c757d !important;
     }
   </style>
 </head>
@@ -26,31 +67,34 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="src/UPN.png" alt="Logo" width="30" height="30" />
+    <a class="navbar-brand d-flex align-items-center" href="../index.html">
+      <img src="../../UPN.png" alt="Logo" width="30" height="30" />
       <span class="ms-2 fw-bold">Prabu UPNYK</span>
     </a>
   </div>
 </nav>
 
-<!-- Form -->
-<div class="container">
+<!-- Konten -->
+<section class="container-box">
   <div class="card shadow-sm">
-    <div class="card-body">
-      <h3 class="mb-4">Konfirmasi Pendaftaran Event</h3>
-      <p class="text-muted" id="event-info">Memuat informasi event...</p>
-      <button class="btn btn-primary" id="btn-daftar">Daftar Sekarang</button>
-      <div id="response-message" class="mt-3"></div>
-    </div>
+    <h3 class="mb-4 text-center">Konfirmasi Pendaftaran Event</h3>
+    <!-- Preview gambar event -->
+    <img id="event-img-preview"
+      class="img-fluid rounded mx-auto d-block mb-3"
+      style="width: auto; max-width: 100%; height: auto; max-height: 260px; background:#f8f9fa;"
+      alt="Poster Event" />
+    <p class="text-muted text-center" id="event-info">Memuat informasi event...</p>
+    <button class="btn btn-primary w-100" id="btn-daftar">Daftar Sekarang</button>
+    <div id="response-message" class="mt-3"></div>
   </div>
-</div>
+</section>
 
 <!-- Footer -->
-<footer>
-  <p>&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
+<footer class="footer1 mt-auto text-center py-3 border-top bg-light">
+  <p class="mb-0">&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
 </footer>
 
-<script src="auth-check.js"></script>
+<script src="../services/auth-check.js"></script>
 <script src="daftar-event-script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
