--- a/frontend/src/pages/user/dashboard-user.html
+++ b/frontend/src/pages/user/dashboard-user.html
@@ -34,7 +34,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="#">
+    <a class="navbar-brand d-flex align-items-center" href="../index.html">
       <img src="../../UPN.png" alt="Logo" width="30" height="30" />
       <span class="ms-2 fw-bold">Prabu UPNYK</span>
     </a>
@@ -66,7 +66,7 @@
   <p>&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
 </footer>
 
-<script src="auth-check.js"></script>
+<script src="../services/auth-check.js"></script>
 <script src="dashboard-user-script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
