--- a/frontend/src/pages/user/event-detail.html
+++ b/frontend/src/pages/user/event-detail.html
@@ -4,26 +4,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Detail Event | PRABU UPNYK</title>
+  <link rel="stylesheet" href="styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
+    body {
+      background: linear-gradient(to right, #1e3c72, #2a5298);
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
     .navbar-brand {
       font-weight: bold;
     }
+
     .btn-primary {
       background-color: #0d6efd;
       border: none;
     }
+
     .btn-primary:hover {
       background-color: #0b5ed7;
     }
+
     .card-title {
       color: #0d6efd;
     }
-    footer {
-      margin-top: 50px;
+
+    .event-card {
+      background-color: white;
+      color: #212529;
+      border-radius: 12px;
+    }
+
+    .event-image {
+      width: 100%;
+      max-width: 500px;
+      height: auto;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .footer {
+      font-size: 0.9rem;
+      color: #ccc;
+      background-color: transparent;
       text-align: center;
-      color: #777;
-      padding: 15px 0;
+      padding: 1rem 0;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      margin-top: auto;
     }
   </style>
 </head>
@@ -32,24 +62,24 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="src/UPN.png" alt="Logo" width="30" height="30" />
+    <a class="navbar-brand d-flex align-items-center" href="../index.html">
+      <img src="../../UPN.png" alt="Logo" width="30" height="30" />
       <span class="ms-2 fw-bold">Prabu UPNYK</span>
     </a>
   </div>
 </nav>
 
 <!-- Konten -->
-<section class="container mt-5" id="event-container">
-  <!-- Detail event akan dimuat lewat JS -->
-</section>
+<main class="container my-5" id="event-container">
+    <!-- Konten akan dimuat lewat JS -->
+  </main>
 
 <!-- Footer -->
-<footer>
-  <p>&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
+<footer class="footer1">
+  <p class="mb-0">&copy; 2025 Prabu UPNYK | Universitas Pembangunan Nasional 'Veteran' Yogyakarta</p>
 </footer>
 
-<script src="auth-check.js"></script>
+<script src="../services/auth-check.js"></script>
 <script src="event-detail-script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
